Code analysis fixing